--- a/layouts/partials/article-preview.html
+++ b/layouts/partials/article-preview.html
@@ -12,7 +12,7 @@
         {{ range $index, $author := . }}
           {{ if gt $index 0 }}, {{ end }}
           {{ with $.Site.GetPage (printf "/%s/%s" $taxo $author) }}
-            <a href="{{ .RelPermalink }}" class="item-author">{{ $author | humanize | title }}</a>
+            <a href="{{ .RelPermalink }}" class="item-author">{{ $author | humanize | title -}}</a>
           {{ end }}
         {{ end }}
       {{ end }}
@@ -41,7 +41,7 @@
       {{ $tags := .GetTerms "tags" }}
       {{ if gt (len $tags) 0}}
         {{ range $tags }}
-          <li class="tag-item"><a href="{{ .RelPermalink }}" class="tag-link">{{ .LinkTitle }} </a></li>
+          <li class="tag-item"><a href="{{ .RelPermalink }}" class="tag-link">{{ .LinkTitle }}&nbsp;</a></li>
         {{ end }}
       {{ end }}
     </ul>
