--- a/assets/css/components/nextprev.css
+++ b/assets/css/components/nextprev.css
@@ -1,13 +1,5 @@
-.nextprev-container {
-  margin-block: 3rem;
-}
-
-.nextprev-container,
-.nextprev {
-  width: 100%;
-}
-
-.nextprev a {
+.prev-art,
+.next-art {
   color: var(--color-primary);
   background-color: var(--color-tertiary);
   border: 2px solid var(--color-tertiary);
@@ -15,12 +7,17 @@
   padding: 0.75rem 1rem;
 }
 
-.nextprev a:hover {
+.prev-art:hover,
+.next-art:hover {
+  color: var(--color-primary);
+  text-decoration: none;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.nextprev a,
-.nextprev a:hover {
+.prev-art,
+.next-art,
+.prev-art:hover,
+.next-art:hover {
   transition: box-shadow 0.3s ease-in-out;
 }
 
