--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   {{ partial "head" . }}
   <body class="has-navbar-fixed-top is-flex is-flex-direction-column">
     {{ partial "header" . }}
-    <div class="container is-flex is-flex-direction-column is-justified-content-center is-align-items-center is-flex-grow-1">
+    <div class="container is-flex is-flex-center-column is-flex-grow-1">
       {{ block "content" . }}{{ end }}
     </div>
     {{ partial "footer" . }}
