--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -2,8 +2,8 @@
   <section class="my-hero">
     {{ partial "hero" . }}
   </section>
-  <section class="recent-articles-container">
-    <ul class="recent-articles">
+  <section class="section has-text-centered is-flex-center-column">
+    <ul class="container is-flex-center-column">
       {{ partial "recent-articles" . }}
     </ul>
   </section>
