--- a/layouts/meta/single.html
+++ b/layouts/meta/single.html
@@ -1,9 +1,10 @@
 {{ define "content" }}
-<article class="article">
-  <div class="article-header">
-    <h1>{{ .Title | title }}</h1>
-  <div class="article-content">
-    {{ .Content }}
-  </div>
-</article>
+  <article class="section has-text-centered">
+    <div class="container">
+      <h1 class="title is-1 my-1">{{ .Title | title }}</h1>
+    </div>
+    <div class="container has-text-left article-content">
+      {{ .Content }}
+    </div>
+  </article>
 {{ end }}
