--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,36 +1,31 @@
 {{ $pag := $.Paginator }}
 {{ if gt $pag.TotalPages 1 }}
-{{ $.Scratch.Set "dot-rendered" false }}
-<nav aria-label="page navigation">
-  <ul class="pagination">
-
-    {{ if and (ne $pag.PageNumber 1) (ne $pag.PageNumber 2) }}
-    <li class="page-item"><a href="{{ $pag.First.URL }}" rel="first" class="page-link">&lt;&lt; First</a></li>
-    {{ end }}
-
-    {{ if $pag.HasPrev }}
-    <li class="page-item"><a href="{{ $pag.Prev.URL }}" rel="prev" class="page-link">&lt; Prev</a></li>
-    {{ end }}
-
-    {{ range $pag.Pagers }}
-    {{ if eq . $pag }}
-    <li class="page-item active"><a href="{{ .URL }}" class="page-link">{{ .PageNumber }}</a></li>
-    {{ else if and (ge .PageNumber (sub $pag.PageNumber 2)) (le .PageNumber (add $pag.PageNumber 2)) }}
-    {{ $.Scratch.Set "dot-rendered" false }} 
-    <li class="page-item"><a href="{{ .URL }}" class="page-link">{{ .PageNumber }}</a></li>
-    {{ else if eq ($.Scratch.Get "dot-rendered") false }}
-    {{ $.Scratch.Set "dot-rendered" true }} 
-    <li class="page-item disabled"><a class="page-link">&middot;&middot;&middot;</a></li>
-    {{ end }}
-    {{ end }}
-
-    {{ if $pag.HasNext }}
-    <li class="page-item"><a href="{{ $pag.Next.URL }}" rel="next" class="page-link">Next &gt;</a></li>
-    {{ end }}
-    
-    {{ if and (ne $pag.PageNumber $pag.TotalPages) ((ne $pag.PageNumber (sub $pag.TotalPages 1))) }}
-    <li class="page-item"><a href="{{ $pag.Last.URL }}" rel="last" class="page-link">Last &gt;&gt;</a></li>
-    {{ end }}
-  </ul>
-</nav>
+  {{ $.Scratch.Set "dot-rendered" false }}
+  <nav aria-label="page navigation">
+    <ul class="pagination my-4">
+      {{ if and (ne $pag.PageNumber 1) (ne $pag.PageNumber 2) }}
+        <li class="page-item"><a href="{{ $pag.First.URL }}" rel="first" class="page-link">&lt;&lt; First</a></li>
+      {{ end }}
+      {{ if $pag.HasPrev }}
+        <li class="page-item"><a href="{{ $pag.Prev.URL }}" rel="prev" class="page-link">&lt; Prev</a></li>
+      {{ end }}
+      {{ range $pag.Pagers }}
+        {{ if eq . $pag }}
+          <li class="page-item active"><a href="{{ .URL }}" class="page-link">{{ .PageNumber }}</a></li>
+        {{ else if and (ge .PageNumber (sub $pag.PageNumber 2)) (le .PageNumber (add $pag.PageNumber 2)) }}
+          {{ $.Scratch.Set "dot-rendered" false }} 
+          <li class="page-item"><a href="{{ .URL }}" class="page-link">{{ .PageNumber }}</a></li>
+        {{ else if eq ($.Scratch.Get "dot-rendered") false }}
+          {{ $.Scratch.Set "dot-rendered" true }} 
+          <li class="page-item disabled"><a class="page-link">&middot;&middot;&middot;</a></li>
+        {{ end }}
+      {{ end }}
+      {{ if $pag.HasNext }}
+        <li class="page-item"><a href="{{ $pag.Next.URL }}" rel="next" class="page-link">Next &gt;</a></li>
+      {{ end }}
+      {{ if and (ne $pag.PageNumber $pag.TotalPages) ((ne $pag.PageNumber (sub $pag.TotalPages 1))) }}
+        <li class="page-item"><a href="{{ $pag.Last.URL }}" rel="last" class="page-link">Last &gt;&gt;</a></li>
+      {{ end }}
+    </ul>
+  </nav>
 {{ end }}
